--- a/style.css
+++ b/style.css
@@ -30,8 +30,9 @@ body {
 }
 
 .wrapper header {
-    font-size: 30px;
-    font-weight: 600;
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
 }
 
 .wrapper .inputField {
